--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "yajra/laravel-oci8":"5.2.*",
-        "league/fractal": "^0.13.0"
+        "laravelcollective/html": "5.2.*",
+        "league/fractal": "^0.13.0",
+        "graham-campbell/flysystem": "^3.0",
+        "league/flysystem-sftp": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
